[package]
name = "leveldb-sys"
version = "1.0.2"
authors = ["Andreas Gerlach <andi@appelgriebsch.com>"]
edition = "2021"
rust-version = "1.57.0"
readme = "README.md"
description = "FFI bindings to LevelDB"
repository = "https://github.com/appelgriebsch/leveldb-sys"
license = "MIT"
links = "leveldb"

[features]
snappy = []

[dependencies]
libc = "0.2"
ffi-opaque = "2.0"

[build-dependencies]
cmake = "0.1"
num_cpus = "1.16"